Off by one error in putback for compressed oops nashorn performance improvement

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • hs25
    • Affects Version/s: hs25
    • Component/s: hotspot
    • None
    • b58

        diff --git a/src/share/vm/memory/metaspace.cpp b/src/share/vm/memory/metaspace.cpp
        --- a/src/share/vm/memory/metaspace.cpp
        +++ b/src/share/vm/memory/metaspace.cpp
        @@ -2869,7 +2869,7 @@

           Universe::set_narrow_klass_base(lower_base);

        - if ((uint64_t)(higher_address - lower_base) < UnscaledClassSpaceMax) {
        + if ((uint64_t)(higher_address - lower_base) <= UnscaledClassSpaceMax) {
             Universe::set_narrow_klass_shift(0);
           } else {
             assert(!UseSharedSpaces, "Cannot shift with UseSharedSpaces");
        @@ -2885,7 +2885,7 @@
           address lower_base = MIN2((address)metaspace_base, cds_base);
           address higher_address = MAX2((address)(cds_base + FileMapInfo::shared_spaces_si
        ze()),
                                         (address)(metaspace_base + compressed_class_space_
        size()));
        - return ((uint64_t)(higher_address - lower_base) < UnscaledClassSpaceMax);
        + return ((uint64_t)(higher_address - lower_base) <= UnscaledClassSpaceMax);
         }

         // Try to allocate the metaspace at the requested addr.

              Assignee:
              Coleen Phillimore
              Reporter:
              Coleen Phillimore
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved: