8027616: Off by one error in putback for compressed oops nashorn performance improvement

Should compare bounds greater than or equal 4G when deciding if shift is needed or CDS area + compressed class space are within 4G of each other.

Reviewed-by: stefank, hseigel, zgu